VKPHTDEV-423 notification orgstructure adapter